# NodeGraphQt

./: .gitignore  pyproject.toml
dev/: scene.py  test.drawio  test.py  viewer.py
docs/: conf.py
docs/_themes/sphinxawesome_theme/: __init__.py  deprecated.py  docsearch.py  highlighting.py  logos.py  postprocess.py
examples/: basic_example.py
examples/hotkeys/: hotkey_functions.py
examples/nodes/: basic_nodes.py  custom_ports_node.py
src/NodeGraphQt/: __init__.py  constants.py
src/NodeGraphQt/base/: commands.py  factory.py  graph.py  menu.py  model.py  node.py  port.py
src/NodeGraphQt/custom_widgets/: nodes_palette.py  nodes_tree.py
src/NodeGraphQt/custom_widgets/properties_bin/: custom_widget_color_picker.py  custom_widget_file_paths.py  custom_widget_slider.py  custom_widget_value_edit.py  custom_widget_vectors.py  node_property_factory.py  node_property_widgets.py  prop_widgets_abstract.py  prop_widgets_base.py
src/NodeGraphQt/nodes/: backdrop_node.py  base_node.py  base_node_circle.py  group_node.py  port_node.py
src/NodeGraphQt/qgraphics/: node_abstract.py  node_backdrop.py  node_base.py  node_circle.py  node_group.py  node_overlay_disabled.py  node_port.py  node_port_in.py  node_port_out.py  node_text_item.py  pipe.py  port.py  slicer.py
src/NodeGraphQt/widgets/: actions.py  dialogs.py  node_graph.py  node_widgets.py  scene.py  tab_search.py  viewer.py  viewer_nav.py
