[tool.poetry]
name = "NodeGraphQt"
version = "0.1.0"
description = "Node graph framework for PySide2/PyQt5 that can be implemented and re-purposed into applications."
authors = ["Johnny Chan"]

[tool.poetry.dependencies]
python = "^3.10"
qt-py = "^1.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

